<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    tools:context=".MainActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nome"
            android:textSize="30dp"
            android:layout_gravity="center"
            android:layout_marginTop="80dp"/>

        <EditText
            android:id="@+id/txtNome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text"
            android:layout_gravity="center"/>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cpf"
            android:textSize="30dp"
            android:layout_gravity="center"/>

        <EditText
            android:id="@+id/textCpf"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number"
            android:layout_gravity="center" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:textSize="30dp"
            android:layout_gravity="center" />

        <EditText
            android:id="@+id/txtLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text"
            android:layout_gravity="center"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/senha"
            android:textSize="30dp"
            android:layout_gravity="center"/>

        <EditText
            android:id="@+id/textSenha"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPassword"
            android:layout_gravity="center"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:layout_marginTop="180dp"
        android:layout_marginEnd="30dp"
        android:layout_marginStart="30dp">

        <Button
            android:id="@+id/buttonCancelCadastro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:background="@color/ButtonColor"
            android:textColor="@color/textColor"
            android:textSize="15dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="10dp"
            android:text="@string/cancel"/>

        <Button
            android:id="@+id/buttonOkCadastro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:background="@color/ButtonColor"
            android:textColor="@color/textColor"
            android:textSize="15dp"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="10dp"
            android:text="@string/ok"/>

    </LinearLayout>



</FrameLayout>